[package]
name = "egui_ratatui"
version = "1.31.0"
authors = ["gold-silver-copper"]
edition = "2024"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
description = "WASM ratatui with egui works with bevy and macroquad and eframe"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gold-silver-copper/egui_ratatui"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ratatui = { version = "0.29", default-features = false }
egui = { version = "0.31", default-features = false }
soft_ratatui = "0.0.4"
