[package]
name = "macroquad_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.27.2"

macroquad = "0.4.5"
egui-macroquad = { git = 'https://github.com/gold-silver-copper/egui-macroquad.git', branch="master" }

ratatui = { version = "0.26.2", default-features = false }
egui_ratatui = { path = "../" }
#disable defaults features for rat frame if you do not want to import eframe
